--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
-<!DOCTYPE html>
+<!DOCTYPE .html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Mellow Yeller | Home</title>
+    <link rel="icon" href="img/favicon.ico">
+    <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-    <header></header>
+    <header id="header"></header>
     <main>
-        <!-- Mobile Home: https://wireframe.cc/NK2fNL 
+        <div class="hero">
+            <img src="./img/Hero Image.webp" alt="Hero Image">
+        </div>
+        <div class="mission">
+        <h3>Our Mission:</h3>
+            <p>Our mission is to assist people with controling their negative emotions.<br>Here are some of the tools that you can use:</p>
+        <section class="explain">
+                <a href="./entries.html"><img src="./img/write.webp" alt="Writing Page Pic"></a>
+                <p>On the entries page, you can write out your feelings and save your writing or destroy it.</p>
+                <p>Reveiw your entries and destroy them, if nessesary.</p>
+                <a href="./entries.html"><img src="./img/read.webp" alt="Reading Page Pic"></a>
+                <a href="./message.html"><img src="./img/affirmations.webp" alt="Affirmation Page Pic"></a>
+                <p>On the affirmation page, a random possitive message will be generated and you can choose to have another.</p>
+                <p>Finally, we have a mood tracker to help you keep track of your feelings.</p>
+                <a href="./tracker.html"><img src="./img/mood.webp" alt="Mood Tracker Page Pic"></a>
+        </section>
+        </main>
+    <footer id="footer"></footer>
+    <script type="module" src="./js/main.js"></script>
+</body>
+</html>
+<!-- Mobile Home: https://wireframe.cc/NK2fNL 
         Desktop Home: https://wireframe.cc/KXwDB4 
         Mobile Entries: https://wireframe.cc/1mUVDa 
         Desktop Entries: https://wireframe.cc/IwUnj4 
@@ -16,9 +40,5 @@
         Desktop Affirmations: https://wireframe.cc/0gkeKE 
         Mobile Mood Tracker: https://wireframe.cc/SOaXAy 
         Desktop Mood Tracker: https://wireframe.cc/6SbOgg          -->
-        <a href="https://coolors.co/171d1c-ad4d1f-c2a83e-f2f2f2-384d48">Color Palette</a>
+        <!-- <a href="https://coolors.co/171d1c-ad4d1f-c2a83e-f2f2f2-384d48">Color Palette</a> -->
         <!-- https://coolors.co/visualizer/171d1c-ad4d1f-c2a83e-f2f2f2-384d48 -->
-    </main>
-    <footer></footer>
-</body>
-</html>
