--- a/message.html
+++ b/message.html
@@ -11,29 +11,12 @@
 <body>
     <header id="header"></header>
     <main>
-       
-       <section class="last">
-        <div id="reverse">
-            <h3>Last Entry:</h3>
-        </div>
-        <button id="des">Destroy It!</button>
-        <button id="reader">Read More Entries</button>
-       </section>
-       <section id="formDes">
-       <form>
-        <fieldset>
-            <legend>Entry:</legend>
-            <label id="initials">Initials: <input type="text" name="initials" required></label><br>
-            <label id="date">Date: <input type="date" name="date" required></label><br>
-            <label id="entry">Write the Rest:<input type="text" name="entry" required></label>
-          </fieldset>
-          <input type="submit" id="save">
-       </form>
-       <button id="destroy">Destroy</button>
-    </section>
-    </main>
+        <h2>Affirmation of the Day:</h2>
+        <section id="aff"></section>
+        <button id="more">Another One</button>
+        </main>
     <footer id="footer"></footer>
-    <script type="module" src="./js/animation.js"></script>
+    <script type="module" src="./js/main.js"></script>
 </body>
 </html>
 <!-- Mobile Home: https://wireframe.cc/NK2fNL 
