--- a/message.html
+++ b/message.html
@@ -12,11 +12,11 @@
     <header id="header"></header>
     <main>
         <h2>Affirmation of the Day:</h2>
-        <section id="aff"></section>
+        <section id="aff"><p id="message"></p></section>
         <button id="more">Another One</button>
         </main>
     <footer id="footer"></footer>
-    <script type="module" src="./js/main.js"></script>
+    <script type="module" src="./js/message.js"></script>
 </body>
 </html>
 <!-- Mobile Home: https://wireframe.cc/NK2fNL 
