--- a/tracker.html
+++ b/tracker.html
@@ -26,6 +26,7 @@
         <div id="moodImg">
         <img src="./img/moodbanner.webp" alt="Mood Image">
         <pre id="log"></pre>
+        <p><span id="others"></span></p>
     </div>
     </main>
     <footer id="footer"></footer>
