--- a/entries.html
+++ b/entries.html
@@ -12,7 +12,7 @@
     <header id="header"></header>
     <main>
        
-       <section class="last">
+       <section id="last">
         <div id="reverse">
             <h3>Last Entry:</h3>
         </div>
