--- a/message.html
+++ b/message.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title>Mellow Yeller | Home</title>
+    <title>Mellow Yeller | Affirmations</title>
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="./style/style.css">
 </head>
