--- a/entries.html
+++ b/entries.html
@@ -15,16 +15,18 @@
        <section id="last">
         <div id="reverse">
             <h3>Last Entry:</h3>
+            <pre id="rev"></pre>
         </div>
+        
         <button id="des">Destroy It!</button>
        </section>
        <section id="formDes">
        <form>
         <fieldset>
             <legend>Entry:</legend>
-            <label id="initials">Initials: <input type="text" name="initials" required></label><br>
-            <label id="date">Date: <input type="date" name="date" required></label><br>
-            <label id="entry">Write the Rest:<input type="text" name="entry" required></label>
+            <label>Initials: <input type="text" name="initials" id="initials"required></label><br>
+            <label>Date: <input type="date" name="date" id="date" required></label><br>
+            <label>Write the Rest:<input type="text" name="entry" id="entry" required></label>
           </fieldset>
           <input type="submit" id="save">
        </form>
